--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,7 @@
     "@radix-ui/react-label": "^2.1.3",
     "@radix-ui/react-separator": "^1.1.4",
     "@radix-ui/react-slot": "^1.2.0",
+    "@radix-ui/react-tabs": "^1.1.8",
     "@radix-ui/react-tooltip": "^1.2.3",
     "@tailwindcss/vite": "^4.1.3",
     "class-variance-authority": "^0.7.1",
@@ -24,7 +25,9 @@
     "lucide-react": "^0.487.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-hook-form": "^7.56.0",
     "react-router": "^7.5.0",
+    "react-router-dom": "^7.5.1",
     "tailwind-merge": "^3.2.0",
     "tailwindcss": "^4.1.3",
     "tw-animate-css": "^1.2.5"
