--- a/client/package.json
+++ b/client/package.json
@@ -19,6 +19,7 @@
     "@radix-ui/react-slot": "^1.2.0",
     "@radix-ui/react-tabs": "^1.1.8",
     "@radix-ui/react-tooltip": "^1.2.3",
+    "@reduxjs/toolkit": "^2.7.0",
     "@tailwindcss/vite": "^4.1.3",
     "@tanstack/react-query": "^5.74.4",
     "class-variance-authority": "^0.7.1",
@@ -27,6 +28,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.56.0",
+    "react-redux": "^9.2.0",
     "react-router": "^7.5.0",
     "react-router-dom": "^7.5.1",
     "tailwind-merge": "^3.2.0",
